got local storage working correctly as an array with each new city 'unshifting' to the front of the array

--- a/assets/jass.css
+++ b/assets/jass.css
@@ -11,6 +11,7 @@
     -webkit-text-size-adjust: 100%;
     /* 2 */
   }
+  .image-container{text-align:center}
   
   /* Sections
        ========================================================================== */
